--- a/Studies.html
+++ b/Studies.html
@@ -20,7 +20,7 @@
             <div class="col-5">
                <p5 style="color: white;">Nicolás Chalee Guerrero Agudelo</p5>
             </div>
-            <a href="AboutMe.html" class="nav-link active" style="color: white;">
+            <a href="index.html" class="nav-link active" style="color: white;">
             About me
             </a>
             <a aria-current="Studies.html" class="nav-link" style="color: white;">
